- Made week and list tabs more prominent - Changed "top level series" wording - Fixed the alignment in week popups

--- a/static-data/static/css/admin.css
+++ b/static-data/static/css/admin.css
@@ -24,11 +24,6 @@ a.addModule {
 	margin-bottom: 30px;
 }
 
-td:focus,
-div:focus {
-	outline: none;
-}
-
 /* Timetable page navigation */
 .nav-label {
 	margin: 8px;
@@ -185,6 +180,15 @@ select.event-type {
  	background-image: url("../img/pencil.png");
  	background-repeat: no-repeat;
  	background-position: 100% 50%;
+}
+
+#adminListView .nav-tabs, #timetable-view .nav-tabs {
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+#adminListView .nav-tabs {
+	margin-bottom: 40px;
 }
 
 #adminListView .event.highlighted > td {
@@ -475,12 +479,6 @@ select.event-type {
 
 #calendarHeading .calendarNavigation:last-child {
 	margin: 0;
-}
-
-.calendarEventInfo h5 {
-	padding-left: 25px;
-	background-repeat: no-repeat;
-	background-position: left 2px;
 }
 
 .calendarEventInfo .actions {
