--- a/static-data/static/css/style.css
+++ b/static-data/static/css/style.css
@@ -3,6 +3,11 @@ body {
 	height: 100%;
 }
 
+td:focus,
+div:focus {
+	outline: none;
+}
+
 #container {
 	position: relative;
 	min-height: 100%;
